# 6502-Emulator

./: .gitignore  CMakeLists.txt  Documentation.md  README.md
6502_emulator/include/Configurations/: Memory.h
6502_emulator/include/Instructions/: InstructionSet.h
6502_emulator/include/Registers/: MnemonicOperation.h  MnemonicTraits.h  Operation.h  OperationTraits.h  RegisterTraits.h  Registers.h
6502_emulator/include/alu/: ALU.h
6502_emulator/include/common/: CPUConfigs.h  CPUData.h  Clock.h  colors.h  types.h
6502_emulator/include/core/: 6502.h  CPU.h
6502_emulator/include/cpu/: ALU.h  CPU.h  MnemonicOperation.h
6502_emulator/src/: main.cpp
tests/: CMakeLists.txt  InitializedOpcodesTest.h  InitializedRegistersTest.h  instructionInitializedTest.h  tests.cpp
